# mpi_parallel_programming

./: README.md
customType/: CMakeLists.txt  main.cpp  main1.cpp  main2.cpp
remoteMemoryReader/: CMakeLists.txt  main_mpi_win_create_get.cpp  main_mpi_win_create_get_winlock.cpp  main_mpi_win_create_put.cpp  main_mpi_win_create_put_winlock.cpp
rma_list/: CMakeLists.txt  main_mpi_rma_list.cpp  main_mpi_rma_list_docs.cpp
rma_list_sketch/: CMakeLists.txt  main_node_replacer.cpp  run_debug_node_replacer.sh
rma_shared_window/: CMakeLists.txt  main_active_rma_shared_win.cpp
spinlock/: CMakeLists.txt
spinlock/numa/: AtomicFlag.cpp  AtomicFlag.h  CMakeLists.txt  Spinlock.cpp  main_numa_spinlock.cpp
spinlock/numa/mpi_cas/: CMakeLists.txt  main_mpi_cas.cpp
spinlock/numa/mpi_util/: CMakeLists.txt  util.cpp  util.h
spinlock/numa/spinlock/: AtomicFlag.cpp  CMakeLists.txt  Spinlock.h  main_numa_spinlock.cpp
spinlock/uma/: CMakeLists.txt  Spinlock.cpp  Spinlock.h  main_uma_spinlock.cpp
